fix: issue with bottom line on IOS 15

--- a/web/src/index.pcss
+++ b/web/src/index.pcss
@@ -27,7 +27,8 @@
   --rgap: 0.5rem;
   --big-gap: 60px;
   --border-radius: 5px;
-  --mobile-footer-height: 52px;
+  --mobile-footer-height: calc(52px + max(env(safe-area-inset-bottom) - 15px, 0px));
+  --mobile-bottom-buttons-height: 54px;
 }
 
 #root {
