--- a/web/src/mobile/styles/components/Charts.pcss
+++ b/web/src/mobile/styles/components/Charts.pcss
@@ -15,7 +15,7 @@
 
   .pg-combined-order-book {
     background: var(--body-background-color);
-    padding: 6px 20px 52px;
+    padding: 6px 20px;
 
     &--no-data-first .cr-order-book:first-child {
       .cr-table__body tr td {
