--- a/web/src/mobile/styles/components/TradingTabs.pcss
+++ b/web/src/mobile/styles/components/TradingTabs.pcss
@@ -2,7 +2,7 @@
   background: var(--main-background-color);
   display: flex;
   height: 100%;
-  padding-bottom: 35px;
+  padding-bottom: var(--mobile-bottom-buttons-height);
   width: 100%;
 
   .cr-tab-panel {
