--- a/web/src/mobile/styles/components/WalletsButtons.pcss
+++ b/web/src/mobile/styles/components/WalletsButtons.pcss
@@ -4,7 +4,7 @@
   border: 0;
   bottom: var(--mobile-footer-height);
   display: flex;
-  height: 54px;
+  height: var(--mobile-bottom-buttons-height);
   justify-content: space-between;
   left: 0;
   padding: 0 17px;
