--- a/web/src/routes/Layout/Layout.pcss
+++ b/web/src/routes/Layout/Layout.pcss
@@ -11,7 +11,7 @@
     max-width: 100vw;
     min-height: auto;
     min-width: 100vw;
-    padding-bottom: 52px;
+    padding-bottom: var(--mobile-footer-height);
     padding-top: 0;
     width: 100vw;
 
